STICKY DO :: DEPLOY

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+* {
+  font-family: 'Pretendard-ExtraLight';
+}
+
+html {
+  width: 400px;
+  height: 480px;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
