--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* Font Face */
+@font-face {
+  font-family: 'Pretendard-Medium';
+  src: url('../public/fonts/Pretendard.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('../public/fonts/Pretendard.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Pretendard-ExtraLight';
+  src: url('../public/fonts/Pretendard.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+}
